--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
- 
-  <distributionManagement>
+  distributionManagement>
     <repository>
       <uniqueVersion>false</uniqueVersion>
       <id>corp1</id>
@@ -44,10 +43,10 @@
     </snapshotRepository>
   </distributionManagement>
 </project>
-
  
- <build>
-   <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+ 
+  <build>
+<pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
