--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
   </distributionManagement>
 </project>
  
- 
+<project>
  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
